--- a/ee-1-1/catalog-info.yaml
+++ b/ee-1-1/catalog-info.yaml
@@ -2,13 +2,14 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ee-1-1
-  description: ee
+  description: EE desc
   tags:
     - execution-environment
+    - ee1
   annotations:
     backstage.io/techdocs-ref: dir:.
     github.com/project-slug: github.com/NilashishC/ee-1-1
 spec:
   type: ansible-execution-environment
-  owner: admin
+  owner: group:default/default
   lifecycle: production
