--- a/ee-1-1/ee-1-1.yaml
+++ b/ee-1-1/ee-1-1.yaml
@@ -3,7 +3,7 @@ version: 3
 
 images:
   base_image:
-    name: 'registry.access.redhat.com/ubi9/python-311:latest'
+    name: 'registry.redhat.io/ansible-automation-platform-25/ee-minimal-rhel9:latest'
 
 dependencies:
   ansible_core:
@@ -13,3 +13,4 @@ dependencies:
   galaxy:
     collections:
       - name: community.crypto
+      - name: google.cloud
